--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                               <nav class="main-menu" id="mainMenuHome3">
                                  <ul>
                                     <li class="active">
-                                       <a href="index.html">Home</a>
+                                       <a href="index.html">Home Main</a>
                                     </li>
                                     <li>
                                        <a href="about.html">About Us</a>
