--- a/about.html
+++ b/about.html
@@ -42,11 +42,11 @@
                      <div class="contact-infos">
                         <div class="email">
                            <div class="icon-wrapper"><i class="flaticon-call"></i></div>
-                           <div><a href="tel:+1(832) 230-3090">(832) 230-3090</a></div>
+                           <div><a href="tel:+1(000) 000-0000">(000) 000-0000</a></div>
                         </div>
                         <div class="phone">
                            <div class="icon-wrapper"><i class="flaticon-email"></i></div>
-                           <div><a href="mailto:info@sltmachineusa.com">info@sltmachineusa.com</a></div>
+                           <div><a href="mailto:info@gmail.com">info@gmail.com</a></div>
                         </div>
                      </div>
                   </div>
@@ -187,7 +187,8 @@
                   </div>
                </div>
                <div class="col-xl-5 offset-xl-1 col-lg-6">
-                  <div class="about-right-bg">
+                  <div class="">
+                     <img  style="width: 100%" src="assets/img/Slt-machine-works-about.jpg" alt="">
                   </div>
                </div>
             </div>
@@ -207,9 +208,9 @@
                            <span class="title">About us</span>
                            <h2 class="subtitle">Machine Shop Services</h2>
                            <p>
-                              13411 Redfish Lane Stafford, TX. 77477
-                              <br>(832) 230-3090
-                              <br>info@sltmachineusa.com
+                              Stafford, TX. 77477
+                              <br>(000) 000-0000
+                              <br>info@gmail.com
                               <br>ISO 9001:2015
                            </p>
                            <h5>SLT Machine Works, LLC</h5>
@@ -354,22 +355,22 @@
                      <div class="footer-contact">
                         <div class="contact-info">
                            <div class="icon-wrapper"><i class="flaticon-placeholder"></i></div>
-                           <p>13411 Redfish Lane Stafford, TX. 77477</p>
+                           <p>Stafford, TX. 77477</p>
                         </div>
                         <div class="contact-info">
                            <div class="icon-wrapper"><i class="flaticon-call"></i></div>
-                           <p><a href="tel:+1(832) 230-3090">(832) 230-3090</a></p>
+                           <p><a href="tel:+1(000) 000-0000">(000) 000-0000</a></p>
                         </div>
                         <div class="contact-info">
                            <div class="icon-wrapper"><i class="flaticon-email"></i></div>
-                           <p><a href="mailto:info@sltmachineusa.com">info@sltmachineusa.com</a></p>
+                           <p><a href="mailto:info@gmail.com">info@gmail.com</a></p>
                         </div>
                      </div>
                   </div>
                </div>
             </div>
             <div class="bottom-footer">
-               <p class="text-center">© Copyrights 2010 SLT Machine Works, LLC. All rights reserved. Designed by LLDTEK</p>
+               <p class="text-center">© Copyrights 2010 SLT Machine Works, LLC. All rights reserved. Designed by <a href="https://websitene.com">Website Nè</a></p>
             </div>
          </div>
       </footer>
