--- a/contact.html
+++ b/contact.html
@@ -42,11 +42,11 @@
                      <div class="contact-infos">
                         <div class="email">
                            <div class="icon-wrapper"><i class="flaticon-call"></i></div>
-                           <div><a href="tel:+1(832) 230-3090">(832) 230-3090</a></div>
+                           <div><a href="tel:+1(000) 000-0000">(000) 000-0000</a></div>
                         </div>
                         <div class="phone">
                            <div class="icon-wrapper"><i class="flaticon-email"></i></div>
-                           <div><a href="mailto:info@sltmachineusa.com">info@sltmachineusa.com</a></div>
+                           <div><a href="mailto:info@gmail.com">info@gmail.com</a></div>
                         </div>
                      </div>
                   </div>
@@ -146,7 +146,7 @@
                      <div class="single-info wow fadeInRight" data-wow-duration="1s">
                         <div class="icon-wrapper"><i class="fas fa-home"></i></div>
                         <div class="info-txt">
-                           <p>13411 Redfish Lane Stafford, TX. 77477</p>
+                           <p>Stafford, TX. 77477</p>
                         </div>
                      </div>
                   </div>
@@ -154,7 +154,7 @@
                      <div class="single-info wow fadeInRight" data-wow-duration="1s" data-wow-delay=".2s">
                         <div class="icon-wrapper"><i class="fas fa-phone"></i></div>
                         <div class="info-txt" style="margin-top: 10px">
-                           <p>(832) 230-3090</p>
+                           <p>(000) 000-0000</p>
                         </div>
                      </div>
                   </div>
@@ -162,7 +162,7 @@
                      <div class="single-info wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
                         <div class="icon-wrapper"><i class="far fa-envelope"></i></div>
                         <div class="info-txt" style="margin-top: 10px">
-                           <p>info@sltmachineusa.com</p>
+                           <p>info@gmail.com</p>
                         </div>
                      </div>
                   </div>
@@ -175,7 +175,7 @@
                   <div class="col-lg-12">
                      <div class="map-wrapper">
                         <div id="">
-                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3468.158951296415!2d-95.56159882288485!3d29.628126338173008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640ddb874788515%3A0x67408e5606e6fbf8!2sSLT%20Machine%20Works!5e0!3m2!1sen!2sus!4v1714420163755!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d55493.113664209886!2d-95.64033319463522!3d29.623459338454303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640e62a886c73bb%3A0x7204f501f8c3960!2sStafford%2C%20TX%2077477%2C%20USA!5e0!3m2!1sen!2s!4v1716574796930!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                      </div>
                   </div>
@@ -219,22 +219,22 @@
                      <div class="footer-contact">
                         <div class="contact-info">
                            <div class="icon-wrapper"><i class="flaticon-placeholder"></i></div>
-                           <p>13411 Redfish Lane Stafford, TX. 77477</p>
+                           <p>Stafford, TX. 77477</p>
                         </div>
                         <div class="contact-info">
                            <div class="icon-wrapper"><i class="flaticon-call"></i></div>
-                           <p><a href="tel:+1(832) 230-3090">(832) 230-3090</a></p>
+                           <p><a href="tel:+1(000) 000-0000">(000) 000-0000</a></p>
                         </div>
                         <div class="contact-info">
                            <div class="icon-wrapper"><i class="flaticon-email"></i></div>
-                           <p><a href="mailto:info@sltmachineusa.com">info@sltmachineusa.com</a></p>
+                           <p><a href="mailto:info@gmail.com">info@gmail.com</a></p>
                         </div>
                      </div>
                   </div>
                </div>
             </div>
             <div class="bottom-footer">
-               <p class="text-center">© Copyrights 2010 SLT Machine Works, LLC. All rights reserved. Designed by <a href="https://lldtek.com">LLDTEK</a></p>
+               <p class="text-center">© Copyrights 2010 SLT Machine Works, LLC. All rights reserved. Designed by <a href="https://websitene.com">Website Nè</a></p>
             </div>
          </div>
       </footer>
