--- a/industries.html
+++ b/industries.html
@@ -44,11 +44,11 @@
                      <div class="contact-infos">
                         <div class="email">
                            <div class="icon-wrapper"><i class="flaticon-call"></i></div>
-                           <div><a href="tel:+1(832) 230-3090">(832) 230-3090</a></div>
+                           <div><a href="tel:+1(000) 000-0000">(000) 000-0000</a></div>
                         </div>
                         <div class="phone">
                            <div class="icon-wrapper"><i class="flaticon-email"></i></div>
-                           <div><a href="mailto:info@sltmachineusa.com">info@sltmachineusa.com</a></div>
+                           <div><a href="mailto:info@gmail.com">info@gmail.com</a></div>
                         </div>
                      </div>
                   </div>
@@ -235,22 +235,22 @@
                      <div class="footer-contact">
                         <div class="contact-info">
                            <div class="icon-wrapper"><i class="flaticon-placeholder"></i></div>
-                           <p>13411 Redfish Lane Stafford, TX. 77477</p>
+                           <p>Stafford, TX. 77477</p>
                         </div>
                         <div class="contact-info">
                            <div class="icon-wrapper"><i class="flaticon-call"></i></div>
-                           <p><a href="tel:+1(832) 230-3090">(832) 230-3090</a></p>
+                           <p><a href="tel:+1(000) 000-0000">(000) 000-0000</a></p>
                         </div>
                         <div class="contact-info">
                            <div class="icon-wrapper"><i class="flaticon-email"></i></div>
-                           <p><a href="mailto:info@sltmachineusa.com">info@sltmachineusa.com</a></p>
+                           <p><a href="mailto:info@gmail.com">info@gmail.com</a></p>
                         </div>
                      </div>
                   </div>
                </div>
             </div>
             <div class="bottom-footer">
-               <p class="text-center">© Copyrights 2010 SLT Machine Works, LLC. All rights reserved. Designed by LLDTEK</p>
+               <p class="text-center">© Copyrights 2010 SLT Machine Works, LLC. All rights reserved. Designed by <a href="https://websitene.com">Website Nè</a></p>
             </div>
          </div>
       </footer>
